--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ ALLOW_SOCIAL_LOGIN=true
 PROVIDER=ollama
 OLLAMA_API_BASE_URL=http://host.docker.internal:11434
 DEFAULT_MODEL=mistral
-CONFIG_PATH=https://github.com/SobieskiCodes/local_llm_integration/blob/main/librechat/librechat.yml
+CONFIG_PATH=https://raw.githubusercontent.com/SobieskiCodes/local_llm_integration/refs/heads/main/librechat/librechat.yml
