working agent response in console

--- a/langchain-agent/requirements.txt
+++ b/langchain-agent/requirements.txt
@@ -3,6 +3,7 @@ uvicorn
 langchain>=0.1.17
 langchain-ollama
 langchain_community
-langgraph
+langgraph>=0.0.36
+langgraph-prebuilt>=0.2.0
 requests
 openai
